# ROS2_HANDEYE2

./: .gitignore  1.md  2.md  README.md
arm_follow_tag/: 1.txt  CMakeLists.txt  package.xml
arm_follow_tag/arm_follow_tag/scripts/: get_relative_pose.py  read_ee_pose.py  simple_pose_move.py
arm_follow_tag/src/: c_move_to_pose.cpp  mtc_control.cpp  跟踪tag并生成ee_pose.txt
cpp_server/: CMakeLists.txt  package.xml
cpp_server/src/: client_node.cpp  server_node.cpp
cpp_server/srv/: FaceDetector.srv
